# polars-lazy-frame

./: .env  Cargo.toml  Readme.md
src/: db.rs  handlers.rs  main.rs
