[package]
name = "polars-lazy-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
polars = { version = "0.44.2", features = ["lazy"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
openssl = "0.10.68"
postgres-openssl = "0.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.133"
actix-rt = "2.10.0"
tracing-test = "0.2.5"